Faster closing Remove the SLF4J error by dumping the package